[gd_scene load_steps=4 format=3 uid="uid://ci8ab86c4bvb7"]

[ext_resource type="Script" path="res://Scenes/world/uiOverlay/uiOverlay.gd" id="1_n2aqe"]
[ext_resource type="PackedScene" uid="uid://c057qvmvmvdao" path="res://Scenes/upgrades/upgradeModal.tscn" id="2_fljw0"]

[sub_resource type="GDScript" id="GDScript_yqi2k"]
script/source = "extends Button


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass

"

[node name="Main" type="Node2D"]
script = ExtResource("1_n2aqe")

[node name="GoToDeathButton" type="Button" parent="."]
offset_right = 163.0
offset_bottom = 58.0
text = "Go to your Death"

[node name="OpenUpgradesButton" type="Button" parent="."]
offset_left = 2.0
offset_top = 67.0
offset_right = 162.0
offset_bottom = 126.0
text = "Open Upgrades"
script = SubResource("GDScript_yqi2k")

[node name="UpgradeModal" parent="." instance=ExtResource("2_fljw0")]
visible = false
offset_left = 629.0
offset_top = 249.0
offset_right = 629.0
offset_bottom = 249.0

[connection signal="pressed" from="GoToDeathButton" to="." method="_on_go_to_death_button_pressed"]
[connection signal="pressed" from="GoToDeathButton" to="GoToDeathButton" method="_on_pressed"]
[connection signal="pressed" from="OpenUpgradesButton" to="." method="_on_open_upgrades_button_pressed"]
